--- a/nextjs_routing_app/package.json
+++ b/nextjs_routing_app/package.json
@@ -26,6 +26,7 @@
     "@shopify/app-bridge-utils": "^1.29.0",
     "@shopify/koa-shopify-auth": "^4.1.2",
     "@shopify/polaris": "^6.2.0",
+    "@shopify/react-shopify-app-route-propagator": "^3.0.8",
     "apollo-boost": "^0.4.9",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
