Adjusted package.json for Github and added README file

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "shopify-app-node",
+  "name": "shopify-nextjs-routing-app",
   "version": "1.0.0",
-  "description": "Shopify's node app for CLI tool",
+  "description": "Small example Shopify embedded app with routing that is visible in the top level domain.",
   "scripts": {
     "test": "jest",
     "dev": "cross-env NODE_ENV=development nodemon ./server/index.js --watch ./server/index.js",
     "build": "NEXT_TELEMETRY_DISABLED=1 next build",
-    "start": "cross-env NODE_ENV=production node ./server/index.js"
+    "start": "cross-env NODE_ENV=production node ./server/index.js",
+    "serve": "shopify serve"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,7 @@
   "author": "Shopify Inc.",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shopify/shopify-app-node/issues"
+    "url": "https://github.com/PaulvdDool/shopify-nextjs-routing-app/issues"
   },
   "dependencies": {
     "@babel/core": "7.12.10",
